# daggen

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: wheels.yml
daggen/: __init__.py  common.pxd  dag.pxd  dag.pyx  daggen.c  daggen_commons.c  daggen_commons.h  tests.py
notebooks/: daggen_examples.ipynb
